repos/emily-python/contents/test/parser/fail/startingGroup.em
# Test double comma in apply

# Arg: --ast2
# Expect failure

(a, b) c
